--- a/manifest.json
+++ b/manifest.json
@@ -60,14 +60,13 @@
         "example": "API-key245678635248795"
       },
       {
-        "name": "data_path",
-        "type": "path",
+        "name": "allow_analyse",
+        "type": "boolean",
         "ask": {
-          "en": "Choose a path (existing or not) for Meilisearch data files (absolute path)",
-          "fr": "Choisissez un dossier existant ou non pour les fichiers de données de Meilisearch (chemin absolu)"
+          "en": "Allow Meilisearch to get data from usage of the application",
+          "fr": "Autoriser Meilisearch à analyser les données d'usage de l'application"
         },
-        "example": "/var/www/mailisearch",
-        "default": "/var/www/mailisearch"
+        "default": false
       }
     ]
   }
