--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,6 +7,8 @@ location __PATH__/ {
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_pass  http://127.0.0.1:__PORT__;
 
+  rewrite __PATH__/(.*) /$1 break;
+
   # Path to source
   alias __FINALPATH__/ ;
 
