--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,7 +10,7 @@ location __PATH__/ {
   proxy_pass  http://127.0.0.1:__PORT__;
 
   # Path to source
-  alias __FINALPATH__/ ;
+  alias __INSTALL_DIR__/ ;
 
   # Force usage of https
   if ($scheme = http) {
