--- a/tests.toml
+++ b/tests.toml
@@ -16,4 +16,4 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    test_upgrade_from.bd789664b890960b74126e60ceb82e3f7ea05f01.name = "Upgrade from 1.12.8~ynh1"
+    # test_upgrade_from.bd789664b890960b74126e60ceb82e3f7ea05f01.name = "Upgrade from 1.12.8~ynh1"
